--- a/src/index.html
+++ b/src/index.html
@@ -2,29 +2,30 @@
 <html dir="ltr" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stencil Starter App</title>
-  <meta name="Description" content="Welcome to the Stencil App Starter. You can use this starter to build entire apps all with web components using Stencil!">
+  <title>RULA Finder</title>
+  <meta name="Description" content="The Ryerson University Library wayfinding app.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <meta name="theme-color" content="#16161d">
+  <meta name="theme-color" content="#004c9b">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge"/>
 
-  <script src="/build/app.js"></script>
+  <script src="/build/finder.js"></script>
 
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
   <link rel="manifest" href="/manifest.json">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mdc-typography">
 
-  <my-app></my-app>
+  <rula-finder></rula-finder>
 
   <style>
     body {
       margin: 0px;
       padding: 0px;
-      font-family: sans-serif;
+      font-family: 'Times New Roman', Times, Georgia, serif;
     }
   </style>
 </body>
